--- a/scss/default/style.scss
+++ b/scss/default/style.scss
@@ -16,7 +16,9 @@
 @include reset-all();
 
 html { 
-    background: url('XAllegroBackground.jpg') no-repeat center center fixed; 
+    /*background: url('XAllegroBackground.jpg') no-repeat center center fixed;*/
+    background: url('3.jpg') no-repeat center center fixed;
+
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
