--- a/scss/default/style.scss
+++ b/scss/default/style.scss
@@ -8,6 +8,7 @@
 @import '_font_awesome';
 @import '_variables';
 @import '_mixins';
+@import '_header';
 @import '_dashboard';
 @import '_form';
 @import '_list';
@@ -23,13 +24,6 @@ html {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    /*
-    background: rgb(149,149,149);
-    background: -moz-linear-gradient(-45deg,  rgba(149,149,149,1) 0%, rgba(13,13,13,1) 46%, rgba(1,1,1,1) 50%, rgba(10,10,10,1) 53%, rgba(78,78,78,1) 76%, rgba(56,56,56,1) 87%, rgba(27,27,27,1) 100%);
-    background: -webkit-linear-gradient(-45deg,  rgba(149,149,149,1) 0%,rgba(13,13,13,1) 46%,rgba(1,1,1,1) 50%,rgba(10,10,10,1) 53%,rgba(78,78,78,1) 76%,rgba(56,56,56,1) 87%,rgba(27,27,27,1) 100%);
-    background: linear-gradient(135deg,  rgba(149,149,149,1) 0%,rgba(13,13,13,1) 46%,rgba(1,1,1,1) 50%,rgba(10,10,10,1) 53%,rgba(78,78,78,1) 76%,rgba(56,56,56,1) 87%,rgba(27,27,27,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#959595', endColorstr='#1b1b1b',GradientType=1 );
-    */
 }
 
 /* GENERAL LAYOUT */
@@ -50,100 +44,12 @@ header {
     max-width: 100vw;
     height: $HeaderHeight;
     background-color: $HeaderBackgroundColor;
-    opacity:$ForeGroundOpacity;
-    background: linear-gradient(to right, $HeaderBackgroundColor 0%,#333333 75%);
+    opacity:$HeaderOpacity;
+    background: linear-gradient(to right, $HeaderBackgroundColor 30%,#34495e 80%);
     color: $HeaderFontColor;
-    font-size:$HeaderFontSize;
-    line-height:$HeaderLineHeight;
-    letter-spacing:0px;
-
-    .MenuIcon {
-        width: $HeaderHeight;
-        height: $HeaderHeight;
-        line-height: $MenuToggleHeight;
-        background-repeat:no-repeat;
-        background-position: center center;
-        margin-left: 4%;
-        background-size: auto 60%;
-    }
-
-    .LeftToolbar {
-
-        width:$NavWidth;
-        height: $HeaderHeight;
-        float:left;
-        display: block;
-        @include reset-a();
-
-        .MenuToggle {
-                float:left;
-                background-image:url('IconMenu.svg');
-        }
-
-        .MenuMyPage {
-                float:left;
-                background-image:url('IconMyPage.svg');
-        }
-
-        a {
-            display: block;
-            padding-bottom: 90%;
-        }        
-    }
-
-    .CenterToolbar {
-        float:left;
-        width: 65%;
-
-        @include reset-a();
-        
-        li {
-                display: inline-block;
-                margin-right:.5%;
-                margin-top: .1%;
-
-                background-color: $HeaderToolbarLiBackgroundColor;
-                padding-left:1%;
-                padding-right:1%;
-        }
-
-        li:hover {
-
-                background-color:$HeaderToolbarLiBackgroundColorHover;
-                color:$HeaderToolbarLiFontColorHover;
-        }
-
-        li:target {
-
-                background-color:$HeaderToolbarLiBackgroundColorTarget;
-                color:$HeaderToolbarLiFontColorTarget;
-        }
-    }
-
-    .RightToolbar {
-        float:right;
-        width:$NavWidth;
-        height: $HeaderHeight;
-        
-         @include reset-a();
-        
-        .MenuHelp {
-            float:right;
-            background-image:url('IconHelp.svg');
-        }
-
-        .MenuSettings {
-            float:right;
-            background-image:url('IconSettings.svg');
-        }
-        .MenuLogout {
-            float:right;
-            padding-right: 30px;
-        }
-    }
-
+    line-height:$HeaderLineHeight/100*120;
 }
-
+/*
 nav {
     width: $NavWidth;
     position: fixed;
@@ -224,16 +130,9 @@ nav {
         }
     }
 }
-
+*/
 .container {
-    /*margin:0.5%;*/
-   /* background-color:rgba(221,221,221,0.25);*/
-    
-    /*background-color: $ContainerBackgroundColor;
-    opacity:$ForeGroundOpacity;*/
-
     position: fixed;
-    /*left: $NavWidth;*/
     left:0;
     overflow: auto;
     top: $HeaderHeight;
