--- a/scss/default/_dashboard.scss
+++ b/scss/default/_dashboard.scss
@@ -89,10 +89,11 @@
     }
 
     .BoxOu {
-        background-color:rgba(52, 73, 94,0.80);
+        //background-color:rgba(52, 73, 94,0.80);
+        background-color:rgba(34, 49, 63,0.85);
     }
     
     .BoxOuType {
-        background-color:rgba(192, 57, 43,0.80)
+        background-color:rgba(192, 57, 43,0.85);
     }
 }
