--- a/scss/default/_variables.scss
+++ b/scss/default/_variables.scss
@@ -23,7 +23,7 @@ $desktop: "(min-width: 1024px)";
 */
 
 $FontSize:100%;
-$ForeGroundOpacity:0.95;
+$ForeGroundOpacity:0.90;
 $FontColor:#222222;
 $BorderRadius:0.2em;
 
@@ -31,11 +31,11 @@ $BorderRadius:0.2em;
 $HeaderHeight:4.5vh;
 
 /*$HeaderBackgroundColor:#2D353A;*/
-$HeaderBackgroundColor:#2c3e50;
+$HeaderBackgroundColor:#22313F;
 $HeaderFontColor:#DDDDDD;
 $HeaderFontSize:$FontSize/100*90; //80%
 $HeaderLineHeight:4.0vh;
-$HeaderOpacity:0.9;
+$HeaderOpacity:0.85;
 //$HeaderToolbarLiBackgroundColor:#1A2228;*/
 $HeaderToolbarLiBackgroundColor:#34495e;
 
