--- a/scss/default/_explorer.scss
+++ b/scss/default/_explorer.scss
@@ -68,7 +68,7 @@
             }
             .edit:before {
                 font-family: Awesome;
-                content: "\f044";
+                content: "\f0f6";
                 margin-left:7.5px;
                 font-size: 90%;
             }
