--- a/scss/default/_list.scss
+++ b/scss/default/_list.scss
@@ -58,12 +58,12 @@
 
                 .New {
                     float:right;
+                    font-size: 110%;
                     margin-top: 2%;
                 }
                 .New:before {
                     font-family: Awesome;
-                    content: "\f0f6";
-                    font-size: 90%;
+                    content: "\f196";
                 }
 
             }
