work in progress php wrapper

--- a/scss/default/_variables.scss
+++ b/scss/default/_variables.scss
@@ -95,7 +95,7 @@ $ListRowBackgroundColorHover:#FF9900;
 $ListRowFontColorHover:#FEFEFE;
 
 
-$EplorerTreeFontSize:$FontSize/100*99; //90%
-$EplorerTreeCircleColor:#FF9900;
-$EplorerTreeCircleColorHover:#77B710;
-$EplorerTreeCircleColorOpen:#77B710;
+$UserExplorerTreeFontSize:$FontSize/100*99; //90%
+$UserExplorerTreeCircleColor:#FF9900;
+$UserExplorerTreeCircleColorHover:#77B710;
+$UserExplorerTreeCircleColorOpen:#77B710;
