--- a/scss/default/_variables.scss
+++ b/scss/default/_variables.scss
@@ -30,7 +30,8 @@ $BorderRadius:0.2em;
 
 $HeaderHeight:4.5vh;
 
-$HeaderBackgroundColor:#22313F;
+//$HeaderBackgroundColor:#22313F;
+$HeaderBackgroundColor:#34495e;
 $HeaderFontColor:#DDDDDD;
 $HeaderFontSize:$FontSize/100*90; //80%
 $HeaderLineHeight:4.0vh;
