--- a/scss/default/_header.scss
+++ b/scss/default/_header.scss
@@ -35,7 +35,7 @@ header {
         }
 
         .IconMyApps {
-
+            color:#FFFFFF;
             a:after {
                 font-family: Awesome;
                 content: "\f009";
