--- a/scss/default/_explorer.scss
+++ b/scss/default/_explorer.scss
@@ -48,9 +48,12 @@
         overflow: auto;
         background-color:rgba(255, 255, 255,0.75);
         //height: 100vh-($HeaderHeight+$ExplorerContextHeight);
-        height: 100vh-($HeaderHeight);
+        height: 97vh-($HeaderHeight);
+        padding: 1.5vh;
+
         .content {
-            padding:1%;
+            width: 100%;
+        
         }
 
     }
