--- a/scss/default/_form.scss
+++ b/scss/default/_form.scss
@@ -163,3 +163,28 @@
         width:45.5%;
     }
 }
+
+.form-2-column {
+
+    ul {
+
+        width:99%;
+    }
+    
+    li {
+        width: 45%;
+        float:left;
+    }
+    
+    label {
+        width:25%;
+    }
+
+    input, textarea {
+        width:45%;
+    }
+
+    select {
+        width:45.5%;
+    }
+}
