--- a/scss/default/_explorer.scss
+++ b/scss/default/_explorer.scss
@@ -8,7 +8,7 @@
         resize:horizontal;
         width: 15%;
         max-width: 80%;
-        background-color:rgba(189, 195, 199,0.75);
+        background-color:rgba(108, 126, 143,0.75);
         min-height: 100%;
         float:left;
         overflow: auto;
@@ -32,11 +32,11 @@
             }
             
             li:hover {
-                background-color:rgba(255, 255, 255,0.45);
+                 background-color:rgba(189, 195, 199,1);
             }
             
             li.selected {
-                background-color:rgba(255, 255, 255,0.45);
+                 background-color:rgba(189, 195, 199,1);
                 
             }
         }
@@ -46,7 +46,8 @@
 
         @include reset-a();
         overflow: auto;
-        background-color:rgba(255, 255, 255,0.75);
+        background-color:rgba(189, 195, 199,1);
+        //background-color:rgba(108, 126, 143,1);
         //height: 100vh-($HeaderHeight+$ExplorerContextHeight);
         height: 97vh-($HeaderHeight);
         padding: 1.5vh;
